src/objects/IFW_IntegrationConfigItem__c.object
<CustomObject>
    <fields>
        <fullName>CS_Id__c</fullName>
        <label>CS_Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint_URL__c</fullName>
        <description>URL of the resource you will access</description>
        <label>Endpoint URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Action__c</fullName>
        <label>Entity Action</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Entity_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Create</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <label>Entity Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Item</fullName>
                </value>
                <value>
                    <fullName>Journal Entry</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Organisation</fullName>
                </value>
				<value>
                    <fullName>Tax Rate</fullName>
                </value>
                <value>
                    <fullName>GetPartLocator</fullName>
                </value>
				<value>
                    <fullName>GetVehicleSpecification</fullName>
                </value>
                <value>
                    <fullName>GetDealer</fullName>
                </value>
                <value>
                    <fullName>Honda Part Inventory</fullName>
                </value>
                <value>
                    <fullName>Honda All Vendor Invoices</fullName>
                </value>
                <value>
                    <fullName>Honda Vendor Invoice</fullName>
                </value>
                <value>
                    <fullName>BRPPartsInvoice</fullName>
                </value>
                <value>
                    <fullName>BRPPartInventory</fullName>
                </value>
                <value>
                    <fullName>BRPRepairOrder</fullName>
                </value>
                <value>
                    <fullName>BRPRetailDeliveryReporting</fullName>
                </value>
                <value>
                    <fullName>Upsert Product</fullName>
                </value>
                <value>
                    <fullName>Payment Terminal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HTTP_Method__c</fullName>
        <label>HTTP Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GET</fullName>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IFW_IntegrationConfig__c</fullName>
        <label>IFW_IntegrationConfig</label>
        <referenceTo>IFW_IntegrationConfig__c</referenceTo>
        <relationshipLabel>IFW_IntegrationConfigItems</relationshipLabel>
        <relationshipName>IFW_IntegrationConfigItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Integration_Entity_Method__c</fullName>
        <label>Integration Entity Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_Record_Id__c</fullName>
        <description>Will store the subscriber record id</description>
        <label>Subscriber Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <description>Override parent Timeout if set</description>
        <label>Timeout</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>IFW_IntegrationConfigItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <label>IFW_IntegrationConfigItem</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Endpoint_URL__c</columns>
        <columns>HTTP_Method__c</columns>
        <columns>IFW_IntegrationConfig__c</columns>
        <columns>Entity_Name__c</columns>
        <columns>Entity_Action__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>INTITEM-{00000}</displayFormat>
        <label>IFW_IntegrationConfigItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IFW_IntegrationConfigItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>